# xLever

./: .env.example  .gitignore  .gitmodules  .vercelignore  AGENTS.md  CLAUDE.md  DEMO_SCRIPT.md  LOOPING_EXPLAINED.md  MADS_README.md  MADSandMAROUA.md  MULTI_CHAIN_STATUS.md  NOTE.md  README.md  SUBMISSION.md  SUBMISSION_CHECKLIST.md  TESTING_LOOPING.md  TESTNET_STATUS.md  deployment.json  docker-compose.yml  hackPlan.md  openclaw.json  package-lock.json  package.json  protocol.md  vercel.json  vite.config.js
agent/: .env.example  .gitignore  INTEGRATION.md  PHASE2_COMPLETE.md  README.md  pyproject.toml  requirements.txt  run.py  test_phase2.py  verify_phase2.py
agent/agent/: __init__.py  cache.py  config.py  main.py
agent/agent/api/: __init__.py  server.py
agent/agent/api/routes/: __init__.py  agent.py  decisions.py  positions.py
agent/agent/backtest/: __init__.py  data_loader.py  metrics.py  simulator.py
agent/agent/contracts/: __init__.py  abi_loader.py  addresses.py
agent/agent/contracts/abis/: erc20.json  euler_vault.json  hedging_vault.json
agent/agent/execution/: __init__.py  positions.py  tx_builder.py  web3_client.py
agent/agent/hitl/: __init__.py  controller.py
agent/agent/intelligence/: __init__.py  market.py  perplexity.py  sentiment.py  tavily.py
agent/agent/models/: __init__.py  base.py  decision.py  metrics.py  position.py
agent/agent/monitor/: __init__.py  alerts.py  metrics.py
agent/agent/risk/: __init__.py  health.py  limits.py  sizing.py
agent/agent/strategy/: __init__.py  llm_strategy.py  rules.py  signals.py
agent/agent/websocket/: __init__.py  server.py
agent/deploy/: install.sh  xlever-agent.service  xlever-api.service
contracts/: DEPLOYMENT.md  QUICKSTART.md  README.md  foundry.toml
docs/: API-INTEGRATIONS.md  ARCHITECTURE.md  DEPLOYMENT.md  FAQ.md  FRONTEND.md  GETTING-STARTED.md  GLOSSARY.md  LIVE-VS-PLANNED.md  MULTI-CHAIN-LENDING.md  PROTOCOL.md  README.md  RISK-ENGINE.md  SMART-CONTRACTS.md  TROUBLESHOOTING.md  USER-GUIDE.md
frontend/: 01-dashboard.html  02-trading-terminal.html  03-ai-agent-operations.html  04-vault-management.html  05-risk-management.html  06-analytics-backtesting.html  07-operations-control.html  08-admin-dashboard.html  09-lending-borrowing.html  agent-bridge.js  agent-coordinator.js  agent-executor.js  app.js  assets.js  chart-strategy-tools.js  chart-triggers.js  config.js  contracts.js  index.html  judge-mode.js  junior-manager.js  junior-styles.css  lending-adapters.js  lending-agent.js  (+29 more)
solana/programs/xlever/: Cargo.toml
solana/programs/xlever/src/: lib.rs  state.rs
solana/programs/xlever/src/instructions/: adjust_leverage.rs  deposit.rs  deposit_junior.rs  initialize_vault.rs  mod.rs  withdraw.rs  withdraw_junior.rs
(+165 files in other folders)
